// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Types renders a types component 1`] = `
<div
  aria-busy={undefined}
  aria-disabled={undefined}
  aria-expanded={false}
  aria-multiselectable={undefined}
  className="ui item left pointing dropdown"
  onBlur={[Function]}
  onChange={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  role="listbox"
  tabIndex={0}
>
  <span>
    <i
      aria-hidden="true"
      className="add icon"
    />
     Add new...
  </span>
  <i
    aria-hidden="true"
    className="dropdown icon"
  />
  <div
    className="menu transition"
  >
    <a
      className="item"
      onClick={[Function]}
      style={Object {}}
    >
      Document
    </a>
  </div>
</div>
`;

exports[`Types renders an active types component 1`] = `
<div
  aria-busy={undefined}
  aria-disabled={undefined}
  aria-expanded={false}
  aria-multiselectable={undefined}
  className="ui item left pointing active dropdown"
  onBlur={[Function]}
  onChange={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  role="listbox"
  tabIndex={0}
>
  <span>
    <i
      aria-hidden="true"
      className="add icon"
    />
     Add new...
  </span>
  <i
    aria-hidden="true"
    className="dropdown icon"
  />
  <div
    className="menu transition"
  >
    <a
      className="item"
      onClick={[Function]}
      style={Object {}}
    >
      Document
    </a>
  </div>
</div>
`;

exports[`Types renders an empty types component 1`] = `<span />`;
